--- a/data/en/sections/research-interests.yaml
+++ b/data/en/sections/research-interests.yaml
@@ -1,20 +1,21 @@
 section:
   name: Research Interests
-  id: research           # was: research-interests
+  id: research
   enable: true
   weight: 7
   showOnNavbar: false
   hideTitle: false
 
-
-researchContents:
-- content: 
-  title: 
+contents:
+- title: ""
   image: "files/research/bot.gif"
-  description: 'My research focuses on Data Science and Machine Learning, with current work in Human Sensing Technologies. <br /><br />Key areas of interest include:' 
-  description2: '* Federated Learning and Fairness in AI'
-  description3: '* Neural Networks and Deep Learning'
-  description4: '* Multimodal Human Sensing'
-  description5: '* Signal Processing'
-  description6: '* Natural Language Processing'
-  description7: '* Ethical and Human-Centered AI'
+  content: |
+    My research lies at the intersection of Data Science, Machine Learning, and Human Sensing. I design AI systems that are fair, ethical, and context-aware.
+
+    **Key areas of interest**
+    - Federated Learning and Algorithmic Fairness
+    - Neural Networks and Deep Learning
+    - Multimodal Human Sensing and Context-Aware Modeling
+    - Signal and Physiological Data Processing
+    - Natural Language Processing
+    - Ethical and Human-Centered AI
