--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -28,7 +28,15 @@ summaryCompany1: 'I am a PhD student at Arizona State University (ASU), beginnin
 
 Prior to my PhD, I completed a thesis-based master’s degree in Computer Science and Engineering at BRAC University in 2023 with a perfect CGPA of 4.0, following my bachelor’s degree in the same department in 2018 with the highest distinction. I then worked as a Lecturer at BRAC University and later in the Department of Software Engineering at Daffodil International University. 
 
-During my studies at BRAC University, I served as a tutor for CSE and Mathematics for over two years, actively participated in competitive programming with multiple national recognitions, and co-organized contests and workshops with the BRAC University Computer Club (BUCC). I also gained industry experience as a software engineer at a US-based company and taught hardware implementation of programming. My research contributions include presenting work at international conferences.'
+During my studies at BRAC University, I served as a tutor for CSE and Mathematics for over two years, actively participated in competitive programming with multiple national recognitions, and co-organized contests and workshops with the BRAC University Computer Club (BUCC). I also gained industry experience as a software engineer at a US-based company and taught hardware implementation of programming. My research contributions include presenting work at international conferences.
+
+My current research is driven by the goal of building AI systems that are fair, ethical, and human-centered. Key areas of interest include:
+- Federated Learning and Algorithmic Fairness
+- Human Sensing and Multimodal Data Processing
+- Neural Networks and Deep Learning
+- Signal and Physiological Data Processing
+- Natural Language Processing
+- Ethical and Context-Aware AI'
 
 
 # your resume. this file path should be relative to you "static" directory
