--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,5 +13,5 @@ contactInfo:
 # some summary about what you do
 summary:
   - Passionate about teaching 
-  - Research interests in Federated Learning, Ethical AI, Multimodal Sensing, and Algorithmic Fairness in Human Sensing Technology
+  - A Full-Time Researcher
   - Enjoy programming
