--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -4,7 +4,7 @@ section:
   id: skills
   enable: true
   weight: 8
-  showOnNavbar: false
+  showOnNavbar: true
   # Can optionally hide the title in sections
   # hideTitle: true
 
